# WickedConfig

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
OUTPUT/: lootbox_example.yml
OUTPUT/lootboxes/: rustybox.yml
src/: app.rs  ignoreme.rs  main.rs  routes.rs
src/app/: routes.rs
src/generators/: lootbox.rs
src/pages/: home.rs  lootbox.rs  mod.rs
src/pages/components/: heading.rs  mod.rs  text_input.rs
src/utils/: app.rs  mod.rs
static/css/: index.scss
static/html/: index.html
static/yaml/INPUT/: template.yml
yaml/: lootbox_example.yml
