[package]
name = "wickedconfig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
linked-hash-map = {version = "0.5.6", features = ["serde_impl"]}
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
